<resources>
    <string name="app_name">MovieStudyApp</string>
    <string name="trending">트랜드</string>
    <string name="story">스토리</string>
    <string name="cast">출연</string>
    <string name="recommendation_movie">추천 영화</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="my_page">마이페이지</string>
    <string name="settings">설정</string>
    <string name="error_api_call">API 호출 중 오류가 발생하였습니다.\n다시 시도해주세요</string>
    <string name="error_no_movie_search_results">영화 조회 결과가 없습니다.</string>
    <string name="refresh">새로고침</string>
    <string name="try_again">다시 검색하기</string>
    <string name="recent_searches">최근 검색어</string>
    <string name="bookmark">북마크</string>
    <string name="like_movie">좋아요</string>
    <string name="my_average">내 별점</string>
    <string name="memo_guide">간단한 메모를 입력해주세요</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="like_register">좋아요 등록</string>
    <string name="empty_like_movie">등록한 좋아요 영화가 없어요!</string>
    <string name="empty_bookmark">등록한 북마크 영화가 없어요!</string>
</resources>