<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".presentation.search.SearchFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/main_white_color"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/binggrae_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/bg_white_round"
        android:hint="@string/search"
        android:fontFamily="@font/binggrae"
        android:textSize="14sp"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSearch"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/search"
        android:fontFamily="@font/binggrae"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/editSearch"
        app:layout_constraintBottom_toBottomOf="@id/editSearch"
        app:layout_constraintStart_toEndOf="@id/editSearch"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtRecentSearches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/binggrae"
        android:textSize="12sp"
        android:textColor="@color/yellow_color"
        android:text="@string/recent_searches"
        app:layout_constraintTop_toBottomOf="@id/editSearch"
        app:layout_constraintStart_toStartOf="@id/editSearch"/>

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="20dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/txtRecentSearches"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchMovie"
        android:layout_width="0dp"
        android:layout_height="370dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/btnSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/cell_similar"/>

    <TextView
        android:id="@+id/txtGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/binggrae_bold"
        android:textColor="@color/main_white_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="찾으시는 영화를 검색해주세요"
        app:layout_constraintTop_toBottomOf="@id/btnSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_movie_search_results"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/binggrae_bold"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/try_again"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/txtError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>