<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".presentation.mypage.MyPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/main_white_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/binggrae_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtLikeMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/like_movie"
            android:textColor="@color/main_white_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/binggrae_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLikeMovie"
            android:layout_width="0dp"
            android:layout_height="370dp"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/txtLikeMovie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/cell_like_movie"
            tools:itemCount="3"/>

        <TextView
            android:id="@+id/txtBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/bookmark"
            android:textColor="@color/main_white_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/binggrae_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvLikeMovie"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBookmark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/txtBookmark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/cell_bookmark"
            tools:itemCount="7"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>